<resources>
    <string name="app_name">Мои разговоры</string>
    <string name="app_setting">Настройки</string>

    <!--Setting-->
    <string name="app_admin_receiver_description">Для запрета удаления и остановки приложения нажмите кнопку активировать.</string>
    <string name="pin_layout_input_pin_title">Введите пароль</string>

    <string name="etUsername">Имя пользователя</string>
    <string name="etPassword">Пароль</string>


    <!--Login Activity-->
    <string name="loginTvLogin">Вход</string>
    <string name="loginBtnLogin">Войти</string>

    <string name="loginCheckUsernameError">Введите имя пользователя. Имя пользователя не может быть пустым.</string>
    <string name="loginCheckPasswordError">Введите пароль. Пароль не может быть пустым</string>

    <string name="loginServerProcess">Отправляем данные на сервер</string>
    <string name="loginServerSuccess">Данные верны</string>
    <string name="loginServerFailure">"Ошибка подколючения к серверу, проверьте ваши сетевые настройи и попробуйте сново"</string>


    <!--Registration Activity-->
    <string name="registTvForgotPassword">Забыли пароль?</string>
    <string name="registTvTitle">Регистрация</string>
    <string name="registEtPasswordRepeat">Повтор пароля</string>
    <string name="registBtnReg">Дальше</string>

    <!--Main Activity-->
    <string name="mainTvManagers">МЕНЕДЖЕРЫ</string>
    <string name="account_logout">Выйти</string>
    <string name="logout_message">Все данные о работе приложения, в том числе и записи будут удалены из хранилища. Вы уверены что ходите выйти из приложения? </string>
    <string name="btnDialogYes">Да</string>
    <string name="btnDialogNo">Нет</string>

</resources>
