<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar"/>

    <RelativeLayout
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_centerInParent="true"
            android:paddingTop="56dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_add"
                app:cardBackgroundColor="#2ea67f"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                android:layout_height="310dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_marginTop="46dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/registTvTitle"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_marginTop="12dp"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                            android:textColorHint="#f0f7f4"
                            android:layout_width="match_parent"
                            android:theme="@style/TextLabel"
                            android:layout_height="match_parent">

                            <EditText
                                android:textSize="13sp"
                                android:hint="@string/etUsername"
                                android:textColor="#f0f7f4"
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:background="@drawable/selector_bg_edit_2"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">
                        <android.support.design.widget.TextInputLayout

                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:textSize="13sp"
                                android:hint="@string/etPassword"
                                android:textColor="#f0f7f4"
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:background="@drawable/selector_bg_edit_2"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">
                        <android.support.design.widget.TextInputLayout

                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textSize="13sp"
                                android:textColor="#f0f7f4"
                                android:hint="@string/registEtPasswordRepeat"
                                android:id="@+id/et_repeatpassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:background="@drawable/selector_bg_edit_2"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <Button
                        android:layout_marginTop="32dp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btnLogin"
                        android:background="@drawable/bt_shape_2"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:layout_width="150dp"
                        android:layout_height="42dp"
                        android:text="@string/registBtnReg"
                        android:textColor="#2fa881">
                    </Button>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                android:src="@mipmap/ic_close"
                android:transitionName="loginFab"
                android:layout_gravity="center_horizontal|top" />
        </FrameLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>

